feat: create org

--- a/src/main/resources/messages/exception/ExceptionMessages_tr.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages_tr.properties
@@ -1,2 +1,4 @@
-email_already_exists = Bu e-posta adresi zaten kullan\u0131l\u0131yor!
-username_already_exists = Bu kullan\u0131c\u0131 ad\u0131 zaten kullan\u0131l\u0131yor!
+username_already_exists = This username is already being used!
+email_already_exists = This email address is already being used!
+organization_email_exists = This organization email address is already being used!
+organization_name_exists = This name is already being used!
