--- a/src/main/resources/messages/general/GeneralMessages_tr.properties
+++ b/src/main/resources/messages/general/GeneralMessages_tr.properties
@@ -1,1 +1,1 @@
-registration_successful = {0} kullanıcısı başarıyla kaydedildi.
+registration_successful = {0} registered123123123wwwwwlyasdasdasdasd!
